docs: Correct the data wrapper format
