# internal/friendship/port/http/list_friend_requests_handler.go
@@ -46,7 +46,7 @@ type ListFriendRequestsResponseData struct {
 // @Produce      json
 // @Param        base_id  query     kernel.OperationID    false "分页游标，返回该ID之前的记录"
 // @Param        limit    query     int    false "分页大小，默认20，最大100"
-// @Success      200      {object}  ListFriendRequestsResponseData "成功返回好友请求列表"
+// @Success      200      {object}  api.Response{data=ListFriendRequestsResponseData} "成功返回好友请求列表"
 // @Failure      400      {object}  api.Response       "请求参数错误"
 // @Failure      401      {object}  api.Response       "未认证"
 // @Failure      500      {object}  api.Response       "服务器内部错误"
