# internal/friendship/port/http/list_friendships_handler.go
@@ -47,7 +47,7 @@ type ListFriendshipsResponseData struct {
 // @Produce      json
 // @Param        base_id  query     domain.FriendshipID    false "分页游标，返回该ID之前的记录"
 // @Param        limit    query     int    false "分页大小，默认20，最大100"
-// @Success      200      {object}  ListFriendshipsResponseData "成功返回好友列表"
+// @Success      200      {object}  api.Response{data=ListFriendshipsResponseData} "成功返回好友列表"
 // @Failure      400      {object}  api.Response      "请求参数错误"
 // @Failure      401      {object}  api.Response      "未认证"
 // @Failure      500      {object}  api.Response      "服务器内部错误"
